--- a/pagina-contactos/index.html
+++ b/pagina-contactos/index.html
@@ -5,30 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Contact Page</title>
 
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    
+    #texto{
+      position: absolute;
+      
+    }
   </style>
 </head>
 <body>
+  <div class="background">
+    <div class="titleformat">IP ADRESS TRACKER</div>
+    <br>
+    <div class="searchbox1">
+      <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Username" aria-describedby="basic-addon1">
+      <i class="fa fa-search-plus searchbox2" aria-hidden="true"></i>
+    </div>
+  </div> 
+    <div class="format">
+      <div class="searchup" style="border-top-left-radius: 9px; border-bottom-left-radius: 9px;">
+        <p>IP Address</p>
+        <h1>192.212.174.101</h1>
+      </div>
+      <div class="searchup">
+        <p>Location</p>
+        <h1>Brooklyn, NY 10001</h1>
+      </div>
+      <div class="searchup">
+        <p>Timezone</p>
+        <h1>UTC-05:00</h1>
+      </div>
+      <div class="searchup" style="border-top-right-radius: 9px; border-bottom-right-radius: 9px;">
+        <p>ISP</p>
+        <h1>SpaceX Starlink</h1>
+      </div>
+    </div>
 
-  Contactos
+    <div class="imagem"></div>
 
-  (formulário de contacto)
-
-  Localização (coordenadas)
-  Morada
-  Email
-  Telefone
-
-
-  <footer>
-    <p class="attribution">
-      Coded by <a href="#">Nome do Aluno</a>.
-    </p>
-  </footer>
+   
 </body>
 </html>
